[workspace]
members = [
  "component_group_derive"
]

[package]
name = "component_group"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
specs = "0.14"
component_group_derive = { path = "component_group_derive", version = "0.1.0" }

[dev-dependencies]
specs-derive = "0.3"
compiletest_rs = { version = "0.3", features = ["stable"] }
