[workspace]
members = [
  "component_group_derive"
]

[package]
name = "component_group"
version = "1.0.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"
description = "Defines the ComponentGroup trait for managing a group of specs::Component instances and moving them between specs::Worlds"
repository = "https://github.com/sunjay/component_group"
readme = "README.md"
keywords = ["specs", "component", "group", "gamedev", "ecs"]
# crates.io/category_slugs
categories = ["game-engines"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "sunjay/component_group" }

[dependencies]
specs = "0.14"
component_group_derive = { path = "component_group_derive", version = "1.0" }

[dev-dependencies]
specs-derive = "0.3"
compiletest_rs = { version = "0.3", features = ["stable"] }
