[package]
name = "component_group_derive"
version = "3.0.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"
description = "Automatic derive for the ComponentGroup trait"
repository = "https://github.com/sunjay/component_group"
readme = "README.md"
keywords = ["specs", "component", "group", "gamedev", "ecs"]
# crates.io/category_slugs
categories = ["game-engines"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "sunjay/component_group" }

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
